# workos-rust

./: Cargo.toml  LICENSE  MODIFICATIONS.md  deny.toml
src/: core.rs  known_or_unknown.rs  lib.rs  roles.rs  user_management.rs  workos.rs
src/admin_portal/operations/: generate_portal_link.rs
src/core/: error.rs  http.rs  response.rs  types.rs
src/core/types/: api_key.rs  metadata.rs  paginated_list.rs  pagination_params.rs  raw_attributes.rs  timestamps.rs  unpaginated_list.rs  url_encodable_vec.rs
src/directory_sync/operations/: delete_directory.rs  get_directory.rs  get_directory_group.rs  get_directory_user.rs  list_directories.rs  list_directory_groups.rs  list_directory_users.rs
src/directory_sync/types/: directory.rs  directory_group.rs  directory_type.rs  directory_user.rs
src/mfa/operations/: challenge_factor.rs  enroll_factor.rs  verify_challenge.rs
src/mfa/types/: authentication_challenge.rs  authentication_factor.rs  mfa_code.rs
src/organizations/: operations.rs  types.rs
src/organizations/operations/: create_organization.rs  delete_organization.rs  get_organization.rs  list_organizations.rs  update_external_id.rs  update_organization.rs
src/organizations/types/: domain_data.rs  external_id.rs  organization.rs
src/passwordless/operations/: create_passwordless_session.rs  send_passwordless_session.rs
src/passwordless/types/: passwordless_session.rs
src/roles/: operations.rs  types.rs
src/roles/operations/: list_organization_roles.rs
src/roles/types/: role.rs
src/user_management/: operations.rs  types.rs
(+71 files in other folders)
